<?xml version="1.0"?>
<package format="2">
  <name>robomaker-jetbot</name>
  <version>0.0.0</version>
  <description>The robomaker-jetbot package</description>

  <maintainer email="buscaron@amazon.com">Cam Buscaron</maintainer>

  <license> Apache License Version 2.0 </license>

  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robomaker-jetbot</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
